@@ -1,4 +1,4 @@
-# $NetBSD: md.sparc64,v 1.94 2011/04/21 09:45:55 haad Exp $
+# $NetBSD: md.sparc64,v 1.95 2011/05/09 08:51:08 manu Exp $
 ./usr/include/ieeefp.h				comp-c-include
 ./usr/include/sparc				comp-c-include
 ./usr/include/sparc/_G_config.h			comp-obsolete		obsolete
@@ -521,6 +521,11 @@
 ./usr/lib/sparc/libpci.so			base-sys-shlib		compat,pic
 ./usr/lib/sparc/libpci_p.a			comp-c-proflib		compat,profile
 ./usr/lib/sparc/libpci_pic.a			comp-c-piclib		compat,pic
+./usr/lib/sparc/libperfuse.a			comp-c-lib		compat,perfuse
+./usr/lib/sparc/libperfuse.so			comp-sys-shlib		compat,pic,perfuse
+./usr/lib/sparc/libperfuse_g.a			comp-c-proflib		compat,debuglib,perfuse
+./usr/lib/sparc/libperfuse_p.a			comp-c-proflib		compat,profile,perfuse
+./usr/lib/sparc/libperfuse_pic.a		comp-c-piclib		compat,pic,perfuse
 ./usr/lib/sparc/libposix.a			comp-c-lib		compat
 ./usr/lib/sparc/libposix.so			base-sys-shlib		compat,pic
 ./usr/lib/sparc/libposix_p.a			comp-c-proflib		compat,profile
@@ -778,6 +783,7 @@
 ./usr/libdata/debug/usr/lib/sparc/libpam.so.3.0.debug			comp-compat-shlib	compat,pic,debug
 ./usr/libdata/debug/usr/lib/sparc/libpcap.so.4.0.debug			comp-compat-shlib	compat,pic,debug
 ./usr/libdata/debug/usr/lib/sparc/libpci.so.2.0.debug			comp-compat-shlib	compat,pic,debug
+./usr/libdata/debug/usr/lib/sparc/libpperfuse.so.0.0.debug			comp-compat-shlib	compat,pic,debug,perfuse
 ./usr/libdata/debug/usr/lib/sparc/libposix.so.0.1.debug			comp-compat-shlib	compat,pic,debug
 ./usr/libdata/debug/usr/lib/sparc/libprop.so.1.1.debug			comp-compat-shlib	compat,pic,debug
 ./usr/libdata/debug/usr/lib/sparc/libpthread.so.1.0.debug		comp-compat-shlib	compat,pic,debug
